--- a/pages/projet4.html
+++ b/pages/projet4.html
@@ -9,8 +9,8 @@
 <body>
     <header>
         <article id="title">
-            <a href="../index.html"><img id="logo" src="../img/logo_white.png" alt=""></a>
-            <span><a href="../index.html">Emilie Kinnoo Architecte</a> </span>
+            <a href="#slideshow-container"><img id="logo" src="./img/logo.webp" alt=""></a>
+            <span><a href="#slideshow-container">Fabien Rémaux Architecte</a> </span>
         </article>        
         <nav>            
                 <li><a href="../index.html#projects-container">Retour aux projets</a></li>                          
